object page fix; objext opened page fox

--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -12,13 +12,28 @@
     <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel:+380509915882">+38(050) 991-58-82</a><a class="footer-link" href="tel:+380509915880">+38(050) 991-58-80</a></div>
     <div class="footer-newsletter">
       <!--FORM START-->
-      <form class="footer-newsletter__form" action="">
-        <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
-        <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
-        <input class="footer-newsletter__field" id="newsletter" type="email"/>
-        <button class="btn footer-newsletter__btn" type="submit">Хочу быть в курсе!</button>
-      </form>
-      <!--FORM END          -->
+      <!--FORM END--><div class="footer-newsletter__form">
+<h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений</h5>
+<div role="form" class="wpcf7" id="wpcf7-f2445-o2" lang="ru-RU" dir="ltr">
+<form action="/#wpcf7-f2445-o2" method="post" class="wpcf7-form invalid" novalidate="novalidate">
+<div style="display: none;">
+<input type="hidden" name="_wpcf7" value="2445">
+<input type="hidden" name="_wpcf7_version" value="5.1.7">
+<input type="hidden" name="_wpcf7_locale" value="ru_RU">
+<input type" value="wpcf7-f2445-o2">
+<input type="hidden" name="_wpcf7_container_post" value="0">
+</div>
+<label class="footer-newsletter__title"> Ваш e-mail
+<span class="wpcf7-form-control-wrap your-email">
+<input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email footer-newsletter__field wpcf7-not-valid" aria-required="true" aria-invalid="true">
+<span role="alert" class="wpcf7-not-valid-tip">Неверно введён электронный адрес.</span>
+</span> 
+</label>
+<input type="submit" value="Хочу быть в курсе!" class="wpcf7-form-control wpcf7-submit btn">
+<span class="ajax-loader"></span>
+</form>
+</div>
+</div>        
     </div><a class="arrow-btn footer-btn" href="#">
       <div class="arrow-btn__icon">
         <svg class="icon">
