--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -34,7 +34,7 @@
                     </label>
                     <label class="contact-form__title" for="tel">Телефон
                         <span class="wpcf7-form-control-wrap tel">
-                            <input type="tel" name="tel" value="+380978812200" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel contact-form__field" id="tel" aria-required="true" aria-invalid="false">
+                            <input type="tel" name="tel" value="+380" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel contact-form__field" id="tel" aria-required="true" aria-invalid="false">
                         </span>
                     </label>
                     <label class="contact-form__title" for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
