--- a/app/pug/object-opened.pug
+++ b/app/pug/object-opened.pug
@@ -50,13 +50,14 @@ html(lang="en")
                             use(xlink:href="images/main-page_icons-sprite.svg#logo-head")
                         p.logo__text жилой комплекс
                         h2.logo__title На Сенной
-                        h4.logo__headline Полтава ул. Сенная, 19
+                        h4.logo__headline Полтава 
+                        h4.logo__headline ул. Сенная, 19
                     .content-picture
                         .item__img
                                 img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
-                                .item__icon-wrap
-                                    svg.icon
-                                        use(xlink:href="images/main-page_icons-sprite.svg#eye")
+                                //- .item__icon-wrap
+                                //-     svg.icon
+                                //-         use(xlink:href="images/main-page_icons-sprite.svg#eye")
                     .content-icons
                         .content-headline
                             h3.content-headline__text Преимущества жилого комплекса
