--- a/app/pug/object.pug
+++ b/app/pug/object.pug
@@ -63,7 +63,7 @@ html(lang="en")
                                         svg.icon
                                             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                                     p.arrow-btn__text Квартиры комплекса
-                            .item__img
+                            a(href="#").item__img
                                 img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                                 .item__icon-wrap
                                     svg.icon
@@ -107,7 +107,7 @@ html(lang="en")
                                         svg.icon
                                             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                                     p.arrow-btn__text Квартиры комплекса
-                            .item__img
+                            a(href="#").item__img
                                 img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'")
                                 .item__icon-wrap
                                     svg.icon
@@ -148,7 +148,7 @@ html(lang="en")
                                         svg.icon
                                             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                                     p.arrow-btn__text Квартиры комплекса
-                            .item__img
+                            a(href="#").item__img
                                 img(src="images/objects/object_img3.jpg", alt="ЖК 'На Сенной'")
                                 .item__icon-wrap
                                     svg.icon
@@ -189,7 +189,7 @@ html(lang="en")
                                         svg.icon
                                             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                                     p.arrow-btn__text Квартиры комплекса
-                            .item__img
+                            a(href="#").item__img
                                 img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                                 .item__icon-wrap
                                     svg.icon
