--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -210,6 +210,23 @@ section {
     }
 }
 
+//alert footer form start
+.wpcf7-not-valid-tip {
+    font-size: 11px;
+    line-height: 16px;
+    display: none;
+    color: #EB5757;
+    display: block !important;
+    position: absolute;
+    left: unset;
+    right: 0;
+    @media (min-width: 1025px) {
+        //bottom: -20px;
+        left: 0;
+    }
+}
+
+//alert footer form end
 //checkbox
 body {
     display: flex;
@@ -235,10 +252,10 @@ section {
 
 footer {
     @media (min-width: 1025px) {
-        padding: 100px 0 50px 170px;
+        padding: 100px 0 50px 0;
     }
     @media (min-width: 1201px) {
-        padding: 100px 0 50px 210px;
+        padding: 100px 0 50px 0;
     }
     @media (min-width: 1367px) {
         //padding-left: 210px;
@@ -255,10 +272,10 @@ footer {
 .apartments-header {
     padding: 0 0 30px 0;
     @media (min-width: 1025px) {
-        padding: 0 0 30px 170px;
+        padding: 0 0 30px 0;
     }
     @media (min-width: 1201px) {
-        padding: 0 0 30px 210px;
+        padding: 0 0 30px 0;
     }
     @media (min-width: 1367px) {
         //padding-left: 210px;
