--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -316,45 +316,37 @@
         // }
     }
     .footer-newsletter {
-        grid-column: 1 / 6;
-        grid-row: 2 / 3;
-        @media (max-width: 576px) {
-            grid-column: 1 / 13;
-            grid-row: 5 / 6;
-            margin-top: 50px;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            grid-column: 2 / 12;
-            grid-row: 5 / 6;
-            margin-top: 30px;
+        grid-column: 1 / 13;
+        grid-row: 5 / 6;
+        margin-top: 50px;
+        @media (min-width: 1025px) {
+            grid-column: 1 / 6;
+            grid-row: 2 / 3;
         }
         // @media (max-width: 960px) {
         //     grid-column: 1 / 7;
         // }
         &__form {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             height: 100%;
-            @media (max-width: 576px) {
-                display: flex;
-                flex-direction: column;
+            display: flex;
+            flex-direction: column;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            @media (min-width: 1025px) {
+                flex-direction: row;
                 justify-content: space-between;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
+                align-items: flex-end;
             }
         }
         &__headline {
-            grid-column: 1 / 7;
-            grid-row: 1/2;
             text-transform: uppercase;
             font-size: 24px;
             line-height: 29px;
@@ -376,17 +368,17 @@
             }
         }
         &__title {
-            grid-column: 1 / 3;
-            grid-row: 2/3;
             font-size: 18px;
+            min-width: 50px;
+            max-width: 100%;
+            display: flex;
+            flex-direction: column;
+            position: relative;
             @media (max-width: 1025px) {
                 font-size: 14px;
             }
         }
         &__field {
-            grid-column: 1 / 4;
-            grid-row: 3/4;
-            font-size: 1.1rem;
             background: transparent;
             line-height: 1.2rem;
             border-bottom: 1px solid #828282;
@@ -404,31 +396,32 @@
             //     grid-row: 5/6;
             // }
         }
-        &__btn {
-            grid-column: 4 / 7;
-            grid-row: 2/4;
-            margin: 0 0 0 1rem;
+        .btn {
             height: 50px;
-            cursor: pointer;
-            align-self: flex-end;
-            @media (max-width: 576px) {
-                font-size: 16px;
-                line-height: 20px;
-                margin: 0 auto;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                font-size: 16px;
-                line-height: 20px;
-                margin: 0 auto;
-            }
-            @media (max-width: 1025px) {
+            font-size: 16px;
+            line-height: 20px;
+            margin: 0 auto;
+            //align-self: flex-end;
+            @media (min-width: 1025px) {
+                margin: 0 0 0 1rem;
+                cursor: pointer;
                 font-size: 14px;
                 padding: 0 .5rem;
             }
-            // @media (max-width: 960px) {
-            //     font-size: 12px;
-            //     padding: 0 1rem;
-            // }
+        }
+        .wpcf7-not-valid-tip {
+            font-size: 11px;
+            line-height: 16px;
+            display: none;
+            color: #eb5757;
+            display: block!important;
+            position: absolute;
+            left: 1px;
+            bottom: 10px;
+            @media (min-width: 1025px) {
+                bottom: -18px;
+                transform: translateY(50%);
+            }
         }
     }
 }
