--- a/app/scss/modules/_page-gallery.scss
+++ b/app/scss/modules/_page-gallery.scss
@@ -15,7 +15,7 @@
     }
     .title {
         font-size: 36px;
-        margin: 120px 0 20px;
+        margin: 150px 0 20px;
         @media (min-width: 1200px) {
             font-size: 64px;
             line-height: 78px;
@@ -45,10 +45,11 @@
         display: grid;
         background: #423C3A;
         color: #ffffff;
-        grid-template-rows: 1fr 1fr;
         margin: 0 0 40px;
-        //height: 600px;
+        grid-template-rows: 57.5% 42.5%;
+        height: 730px;
         @media (min-width: 1025px) {
+            grid-template-rows: 1fr 1fr;
             margin: 0;
             min-height: 500px;
             max-height: 700px;
@@ -108,6 +109,8 @@
         position: relative;
         justify-content: center;
         display: flex;
+        @include size(100%, auto);
+        overflow: hidden;
         &:hover {
             img {
                 transform: scale(1.1);
@@ -118,13 +121,14 @@
             }
         }
         img {
-            width: 100%;
-            min-height: 500px;
-            max-height: 700px;
+            @include size(100%, auto);
+            @media (min-width: 1025px) {
+                width: 100%;
+                min-height: 500px;
+                max-height: 700px;
+            }
             transition: all 1s linear;
         }
-        @include size(100%, auto);
-        overflow: hidden;
         &__icon-wrap {
             @include pos($t: 50%, $l: 50%);
             border-radius: 50%;
