--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -17,11 +17,13 @@
     .footer {
         //background: rgba(229, 229, 229, .5);
         background: #f5f5f4;
+        padding: 10px 0 50px;
     }
 }
 
 .object-header {
     background: #F5F5F4;
+    padding-bottom: 0;
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
@@ -50,14 +52,21 @@
             line-height: 23px;
         }
     }
+    .container {
+        margin-bottom: 0;
+    }
 }
 
 .object-content {
     background: #f5f5f4;
+    @media (min-width: 1025px) {
+        padding: 0;
+    }
     .container {
         padding: 0;
+        margin-bottom: 0;
         @media (min-width: 1025px) {
-            padding: 0 10px;
+            padding: 0 10px 0;
         }
     }
 }
@@ -141,6 +150,7 @@
     @media (min-width: 1025px) {
         grid-template-columns: 30% 40% 30%;
         overflow: hidden;
+        margin: 0 0 90px;
     }
     @media (min-width: 1200px) {}
     @media (min-width: 1366px) {
@@ -214,6 +224,13 @@
         font-size: 16px;
         .arrow-btn {
             margin-bottom: 30px;
+            .icon {
+                top: 50%;
+                left: 55%;
+                -webkit-transform: translateY(-50%) rotate(-180deg);
+                transform: translateY(-50%) translateX(-50%) rotate(-180deg);
+                height: 20px;
+            }
         }
         @media (min-width: 1025px) {
             grid-column: 1/2;
@@ -230,12 +247,12 @@
                 &__icon {
                     &::after {
                         @include size(65px);
-                        top: -32.5px;
+                        top: 50%;
                         left: 1px;
                     }
                 }
                 &__text {
-                    padding-left: 80px;
+                    padding-left: 20px;
                     font-size: 16px;
                 }
             }
@@ -253,10 +270,19 @@
             height: unset;
             margin: 0;
         }
+        &:hover {
+            img {
+                transform: scale(1.1);
+            }
+            .item__icon-wrap {
+                filter: invert(1);
+            }
+        }
         img {
             min-height: 100%;
             min-width: 100%;
             max-width: 120%;
+            transition: all 1s cubic-bezier(.04, .5, .68, 1.04);
             // @media (min-width: 1025px) {
             //     @include pos($b: 50%, $l: 50%);
             //     transform: translateX(-50%) translateY(50%);
