--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -22,6 +22,9 @@
     &-head {
         grid-column: 1/7;
         z-index: 5;
+        @media (max-width: 1366px) {
+            grid-column: 1/6;
+        }
         @media (max-width: 576px) {
             grid-column: 1/13;
         }
@@ -119,17 +122,20 @@
         // align-items: center;
         // justify-items: space-between;
         &__name {
-            padding: 25px 0;
-            //font-size: 24px;
-            font-size: 32px;
-            line-height: 44px;
-            @media (max-width: 576px) {
-                padding: 15px 0 5px;
+            padding: 15px 0 5px;
+            height: auto;
+            padding: 25px 0 0;
+            @media (min-width: 1025px) {
+                padding: 25px 0;
+                font-size: 32px;
+                line-height: 30px;
+                height: 100px;
+                justify-self: center;
+                align-self: center;
             }
-            @media (max-width: 812px) and (orientation: landscape) {
+            @media (max-width: 1025px) and (orientation: landscape) {
                 grid-row: 1/2;
                 grid-column: 1/13;
-                padding: 25px 0 0;
             }
         }
         &__img {
