--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -2,6 +2,8 @@
     background: url(../images/bg-contacts.jpg) 50% no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
     color: $tw;
 }
 
@@ -56,9 +58,25 @@
     line-height: 20px;
     position: relative;
     margin-bottom: 30px;
+    input {
+        // color: #423C3A;
+        // border-bottom: 2px solid #423C3A;
+    }
     @media (min-width: 1025px) {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 0;
+        height: 75px;
+        justify-content: space-between;
+    }
+    @media (min-width: 1370px) {
+        font-size: 21px;
+        //line-height: 29px;
+        margin-bottom: 0;
+    }
+    @media (min-width: 1500px) {
         font-size: 24px;
-        line-height: 29px;
+        //line-height: 29px;
         margin-bottom: 0;
     }
 }
@@ -180,7 +198,7 @@
     grid-column: 3/10;
     text-transform: uppercase;
     @media (min-width: 1025px) {
-        grid-column: 9/ 11;
+        grid-column: 9/ 12;
         text-transform: initial;
     }
     line-height: 50px;
