section article fix; section apartments fix; page object opened fix;

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -53,8 +53,8 @@ html(lang="en")
         <!--build:js js/main.min.js -->
         script(src="js/libs/jquery.min.js")
         script(src="js/libs/jquery-ui.js")
-        script(src="js/libs/lightgallery.js")
-        script(src="js/libs/aos.js")
+        script(src="js/libs/lightgallery-all.min.js")
         script(src="js/libs/slick.min.js")
+        script(src="js/libs/aos.js")
         script(src="js/main.js")
         <!--endbuild-->
