--- a/app/pug/object/object-modal.pug
+++ b/app/pug/object/object-modal.pug
@@ -36,7 +36,7 @@
         .photo
             img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'").img
         .object-modal__btn
-            a.arrow-btn.arrow-btn--left(href="#")
+            .arrow-btn.arrow-btn--left
                 .arrow-btn__icon
                     svg.icon
                         use(xlink:href="images/main-page_icons-sprite.svg#arrow")
