--- a/app/pug/apartments.pug
+++ b/app/pug/apartments.pug
@@ -69,10 +69,9 @@ html(lang="en")
         <!--build:js js/main.min.js -->
         script(src="js/libs/jquery.min.js")
         script(src="js/libs/jquery-ui.js")
-        script(src="js/libs/lightgallery.js")
-        script(src="js/libs/aos.js")
+        script(src="js/libs/lightgallery-all.min.js")
         script(src="js/libs/slick.min.js")
+        script(src="js/libs/aos.js")
         include layout/flatris.html
         script(src="js/main.js")
-
         <!--endbuild-->
