--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -13,23 +13,28 @@
         overflow: hidden;
     }
     .headline {
-        line-height: 37px;
-        @media (max-width: 576px) {
-            line-height: 20px;
-            margin: 0 0 20px 2px;
+        line-height: 20px;
+        margin: 0 0 20px 2px;
+        @media (min-width: 1024px) {
+            line-height: 37px;
+        }
+    }
+    .title {
+        font-size: 36px;
+        line-height: 44px;
+        margin-bottom: 10px;
+        @media (min-width: 1024px) {
+            font-size: 52px;
+            margin-bottom: 10px;
+            text-shadow: 1px 1px 2px #f5f5f4;
         }
     }
     &-head {
-        grid-column: 1/7;
         z-index: 5;
-        @media (max-width: 1366px) {
+        grid-column: 1/7;
+        grid-column: 1/13;
+        @media (min-width: 1024px) {
             grid-column: 1/6;
-        }
-        @media (max-width: 576px) {
-            grid-column: 1/13;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            //grid-column: 1/13;
         }
     }
     .arrow-btn {
@@ -50,92 +55,82 @@
     }
     &-slider {
         &__nextbtn {
-            @include pos($r: 35px, $t: 50%);
+            @include pos($r: 13px, $t: 50%);
             z-index: 3;
             fill: #FFF3A6;
             transform: translateX(50%) rotate(180deg);
-            @media (max-width: 576px) {
-                top: 50%;
-                right: 13px;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                display: none;
+            @media (min-width: 1024px) {
+                @include pos($r: 35px, $t: 50%);
             }
         }
         &__prevbtn {
-            @include pos($r: 53%, $t: 50%);
+            @include pos($l: 8px, $t: 50%);
             z-index: 3;
             fill: #FFF3A6;
-            @media (max-width: 576px) {
-                top: 50%;
-                left: 8px;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                display: none;
+            @media (min-width: 1024px) {
+                @include pos($l: 33%, $t: 50%);
             }
         }
         &__wrap {
-            @include pos($t: 100px, $l: 50%);
-            width: 55vw;
-            @media (max-width: 1025px) {
-                left: 65%;
+            @include pos($t: 210px, $r: 50%);
+            transform: translateX(50%);
+            width: calc(100% - 40px);
+            &:before {
+                display: none;
             }
             &:after {
-                content: '';
-                display: block;
-                @include pos($t: 0, $r: -130px);
-                @include size(400px, 100%);
-                transform: rotate(180deg) translateX(50%);
-                background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 21.79%);
-                z-index: 2;
+                display: none;
             }
-            @media (max-width: 576px) {
-                @include pos($t: 210px, $l: 20px);
-                width: calc(100% - 40px);
-                &:before {
-                    display: none;
-                }
-                &:after {
-                    display: none;
-                }
+            @media (min-width: 576px) {
+                @include pos($t: 210px, $r: 50%);
+                transform: translateX(50%);
+                width: 80%;
+                //left: 50%;
+                // transform: translateX(-50%);
             }
-            @media (max-width: 812px) and (orientation: landscape) {
-                @include pos($t: 340px, $l: 20px);
-                width: calc(100% - 40px);
-                &:before {
-                    display: none;
-                }
+            @media (min-width: 768px) {
+                @include pos($t: 210px, $r: 50%);
+                transform: translateX(50%);
+                width: 50%;
+                //left: 50%;
+                //transform: translateX(-50%);
+            }
+            @media (min-width: 1024px) {
+                transform: translateX(0);
+                @include pos($t: 100px, $r: 0);
+                width: 55vw;
                 &:after {
-                    display: none;
+                    content: '';
+                    display: block;
+                    @include pos($t: 0, $r: -2px);
+                    @include size(400px, 100%);
+                    transform: rotate(180deg);
+                    background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 21.79%);
+                    z-index: 2;
                 }
             }
         }
     }
     &-tile {
-        @media (max-width: 812px) and (orientation: landscape) {}
         margin: 0 .25rem;
         background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
         text-align: center;
         color: $tw;
         display: grid !important;
-        // flex-direction: column;
-        // align-items: center;
-        // justify-items: space-between;
+        min-width: 196px;
         &__name {
             padding: 15px 0 5px;
             height: auto;
             padding: 25px 0 0;
-            @media (min-width: 1025px) {
+            grid-row: 1/2;
+            grid-column: 1/13;
+            @media (min-width: 1024px) {
                 padding: 25px 0;
-                font-size: 32px;
-                line-height: 30px;
+                font-size: 36px;
+                line-height: 44px;
                 height: 100px;
                 justify-self: center;
                 align-self: center;
-            }
-            @media (max-width: 1025px) and (orientation: landscape) {
-                grid-row: 1/2;
-                grid-column: 1/13;
             }
         }
         &__img {
@@ -143,20 +138,22 @@
             height: 370px;
             overflow: hidden;
             position: relative;
+            grid-row: 2/3;
+            grid-column: 1/13;
             &:before {
                 content: '';
                 @include pos($b: -1px, $l: 0);
                 @include size(100%, 16px);
                 background: #423C3A;
             }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-row: 2/5;
-                grid-column: 1/7;
-                justify-self: center;
-                align-self: center;
-                height: 260px;
-                margin: 15px;
-            }
+            // @media (max-width: 812px) and (orientation: landscape) {
+            //     grid-row: 2/5;
+            //     grid-column: 1/7;
+            //     justify-self: center;
+            //     align-self: center;
+            //     height: 260px;
+            //     margin: 15px;
+            // }
             img {
                 min-height: 100%;
                 width: 100%;
@@ -173,11 +170,8 @@
             }
         }
         &__icon {
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-row: 2/3;
-                grid-column: 7/13;
-                margin: 40px 0 0;
-            }
+            grid-row: 3/4;
+            grid-column: 1/13;
             margin: 50px 0;
             @media (max-width: 576px) {
                 margin: 15px 0;
@@ -195,19 +189,13 @@
             line-height: 44px;
             text-align: center;
             padding: 0 .25rem;
+            grid-row: 4/5;
+            grid-column: 1/13;
             @media (max-width: 576px) {
                 font-size: 24px;
                 line-height: 29px;
                 width: 75%;
                 justify-self: center;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-row: 3/4;
-                grid-column: 7/13;
-                margin-bottom: 35px;
-                padding: 0 .5rem;
-                font-size: 24px;
-                line-height: 29px;
             }
         }
         &__link {
@@ -218,16 +206,8 @@
                 width: 75%;
                 justify-self: center;
             }
-            @media (max-width: 812px) and (orientation: landscape) {
-                grid-row: 4/5;
-                grid-column: 7/13;
-                margin: 0 0 40px;
-                font-size: 16px;
-                line-height: 20px;
-                width: 75%;
-                justify-self: center;
-                padding: 0 .25rem;
-            }
+            grid-row: 5/6;
+            grid-column: 1/13;
             margin-bottom: 50px;
             text-transform: uppercase;
             font-size: 22px;
