--- a/app/scss/modules/_section-articles.scss
+++ b/app/scss/modules/_section-articles.scss
@@ -40,23 +40,42 @@
     }
     &-tile {
         position: relative;
-        padding: 420px 0 300px 280px;
-        @media (max-width: 1366px) {
-            padding: 290px 0 200px 210px;
+        //padding: 250px 0 120px 10px;
+        min-height: 775px;
+        @media (min-width: 1025px) {
+            //padding: 420px 0 300px 280px;
+            min-height: 1000px;
         }
-        @media (max-width: 1025px) {
-            padding: 290px 0 200px 180px;
-        }
-        @media (max-width: 576px) {
-            padding: 250px 0 120px 10px;
-        }
-        @media (max-width: 812px) and (orientation: landscape) {
-            padding: 250px 0 120px 70px;
-        }
+        // @media (max-width: 1366px) {
+        //     padding: 290px 0 200px 210px;
+        // }
+        // @media (max-width: 1025px) {
+        //     padding: 290px 0 200px 180px;
+        // }
+        // @media (max-width: 812px) and (orientation: landscape) {
+        //     padding: 250px 0 120px 70px;
+        // }
         .container {
-            margin: 0;
-            top: 0;
-            left: 0;
+            // margin: 0;
+            // position: absolute;
+            // transform: translateY(-50%);
+            // left: 0;
+            // top: 80%;
+            padding-top: 235px;
+            padding-bottom: 120px;
+            @media (min-width: 576px) and (orientation: portrait) {
+                padding-top: 265px;
+            }
+            @media (min-width: 768px) and (orientation: portrait) {
+                padding-top: 300px;
+                padding-bottom: 140px;
+            }
+            @media (min-width: 1024px) and (orientation: landscape) {
+                padding-top: 265px;
+            }
+            @media (min-width: 1367px) {
+                padding-top: 375px;
+            }
         }
     }
     &-tile__title {
